# Projet_OpenGL

./: CMakeLists.txt  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Projet_OpenGL.sln  Projet_OpenGL.vcxproj  Projet_OpenGL.vcxproj.filters  README.md  controls.cpp  controls.h  default.nix  globals.h  vbo_indexer.cpp  vbo_indexer.h
cmake/: FindGLFW.cmake
resources/shaders/: shader.frag  shader.vert
source/: main.cpp  shader.cpp
